@@ -42,12 +42,15 @@ class CookieCuttrViewlet(BrowserView):
 class CookieCuttrAwareAnalyticsViewlet(AnalyticsViewlet):
 
     def render(self):
+        import pdb; pdb.set_trace( )
         settings = getUtility(IRegistry).forInterface(ICookieCuttrSettings)
 
         available = settings and settings.cookiecuttr_enabled
 
         # Render if CookieCuttr is enabled and Cookies were accepted
-        if available and self.request.cookies.get('cc_cookie_accept', None):
+        if available and \
+            self.request.cookies.get('cc_cookie_accept', None) == \
+                'cc_cookie_accept':
             return super(CookieCuttrAwareAnalyticsViewlet, self).render()
 
         return ""
